[gd_scene load_steps=27 format=3 uid="uid://brtbumnximld2"]

[ext_resource type="Script" path="res://Scripts/Boss.gd" id="1_vko74"]
[ext_resource type="Shader" path="res://assets/Shaders/outline.gdshader" id="2_fcmon"]
[ext_resource type="Texture2D" uid="uid://dkhbboq6hlt4m" path="res://assets/sprites/Enemies/GameJamBoss.png" id="3_6vpkc"]
[ext_resource type="Script" path="res://Scripts/HitBox.gd" id="4_xxsju"]
[ext_resource type="Texture2D" uid="uid://dpfhgl2646nh6" path="res://assets/sprites/BossParticles.png" id="5_k8au6"]
[ext_resource type="Script" path="res://Scripts/HurtBox.gd" id="6_bneum"]
[ext_resource type="AudioStream" uid="uid://d0h7uc8ejv6xx" path="res://assets/Sounds/Hit.mp3" id="7_ea3ts"]
[ext_resource type="Script" path="res://Scripts/RandomizedAudio.gd" id="8_yvlij"]
[ext_resource type="AudioStream" uid="uid://6ftmrao04hn2" path="res://assets/Sounds/EnemySwing.mp3" id="9_3h0xe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8wmsl"]
size = Vector2(32, 68)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xlubf"]
resource_local_to_scene = true
shader = ExtResource("2_fcmon")
shader_parameter/max_line_width = 10.0
shader_parameter/min_line_width = 5.0
shader_parameter/freq = 2.0
shader_parameter/block_size = 20.0
shader_parameter/outline_colour = Vector4(0, 0, 0, 1)
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_value = 0.0

[sub_resource type="Animation" id="Animation_p73nl"]
resource_name = "Walk"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SwordHurtBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_fxyyk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SwordHurtBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_0eve2"]
resource_name = "Attack"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 5, 6, 7, 8, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SwordHurtBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cjd5a"]
_data = {
"Attack": SubResource("Animation_0eve2"),
"RESET": SubResource("Animation_fxyyk"),
"Walk": SubResource("Animation_p73nl")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5lesr"]
size = Vector2(36, 70)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_jdq0v"]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id="Curve_i73tb"]
_data = [Vector2(0.348571, 1), 0.0, 0.0, 0, 0, Vector2(0.754286, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_d5f6x"]
curve = SubResource("Curve_i73tb")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_rgqji"]
particle_flag_align_y = true
particle_flag_disable_z = true
angle_min = 1.07288e-05
angle_max = 360.0
spread = 180.0
flatness = 1.0
initial_velocity_min = 735.37
initial_velocity_max = 1750.0
gravity = Vector3(0, 0, 0)
scale_max = 4.0
scale_curve = SubResource("CurveTexture_d5f6x")
anim_offset_max = 1.0

[sub_resource type="Animation" id="Animation_tyk5r"]
resource_name = "Dead"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1.1487),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1e-05)]
}

[sub_resource type="Animation" id="Animation_ve4x8"]
resource_name = "Hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/flash_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:material:shader_parameter/flash_value")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_4slw7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/flash_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:material:shader_parameter/flash_value")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a3wvo"]
_data = {
"Dead": SubResource("Animation_tyk5r"),
"Hurt": SubResource("Animation_ve4x8"),
"RESET": SubResource("Animation_4slw7")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7onjf"]
size = Vector2(37.75, 83.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dycwv"]
size = Vector2(37.7595, 78.426)

[node name="Boss" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource("1_vko74")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, 10)
shape = SubResource("RectangleShape2D_8wmsl")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
material = SubResource("ShaderMaterial_xlubf")
position = Vector2(24, -3)
texture = ExtResource("3_6vpkc")
hframes = 18

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cjd5a")
}

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 4
script = ExtResource("4_xxsju")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(5, 10)
shape = SubResource("RectangleShape2D_5lesr")

[node name="HitParticles" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_jdq0v")
position = Vector2(10, 0)
emitting = false
amount = 15
process_material = SubResource("ParticleProcessMaterial_rgqji")
texture = ExtResource("5_k8au6")
lifetime = 0.5
one_shot = true
speed_scale = 1.5
explosiveness = 0.7
randomness = 0.1
fixed_fps = 12
interpolate = false

[node name="Hit" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_a3wvo")
}

[node name="AttackCheck" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackCheck"]
position = Vector2(42, 4)
shape = SubResource("RectangleShape2D_7onjf")

[node name="SwordHurtBox" type="Area2D" parent="."]
position = Vector2(8.125, 1)
collision_mask = 64
script = ExtResource("6_bneum")
knockback = 150

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwordHurtBox"]
position = Vector2(47.08, 11.3622)
rotation = -0.350811
shape = SubResource("RectangleShape2D_dycwv")
disabled = true

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_ea3ts")
volume_db = -10.0
pitch_scale = 0.5
bus = &"SFX"
script = ExtResource("8_yvlij")

[node name="AttackSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_3h0xe")
volume_db = -10.0
pitch_scale = 0.4
bus = &"SFX"
script = ExtResource("8_yvlij")

[connection signal="area_entered" from="AttackCheck" to="." method="_on_attack_check_area_entered"]
[connection signal="area_exited" from="AttackCheck" to="." method="_on_attack_check_area_exited"]
[connection signal="area_entered" from="SwordHurtBox" to="SwordHurtBox" method="_on_area_entered"]
